--- a/01_Introduction/1.html
+++ b/01_Introduction/1.html
@@ -13,6 +13,24 @@
     <div id="app">
         {{ message }}
     </div>
+    <div id="app-2">
+        <span v-bind:title="message">
+            Hover your mouse over me for a few seconds
+            to see my dynamically bound title!
+        </span>
+    </div>
+    <div id="app-3">
+        <span v-if="seen">Now you see me</span>
+    </div>
+    <div id="app-4">
+        <ol>
+            <li v-for="todo in todos">
+                {{ todo.text }}
+            </li>
+        </ol>
+    </div>
+
+
 </body>
 
 <script>
@@ -23,9 +41,31 @@
         }
     });
     var app2 = new Vue({
-        el: '#app2',
+        el: '#app-2',
         data: {
             message: 'You loaded this page on ' + new Date().toLocaleString()
+        }
+    });
+
+    var app3 = new Vue({
+        el: '#app-3',
+        data: {
+            seen: true
+        }
+    });
+    var app4 = new Vue({
+        el: '#app-4',
+        data: {
+            todos: [{
+                    text: 'Learn JavaScript'
+                },
+                {
+                    text: 'Learn Vue'
+                },
+                {
+                    text: 'Build something awesome'
+                }
+            ]
         }
     });
 </script>
